# adventure-log

./: .env.example  .gitignore  Dockerfile  README.md  hugo.toml  pyproject.toml  run.sh
.github/scripts/: generate_journal.py
.github/workflows/: campaign-journal.yml
client/: index.html  stage.js  style.css
content/: _index.md
content/characters/: _index.md  edwin.md  granit.md  granite.md  livrielle.md  lyvriele-enafrya.md  rides-the-wake.md  vardar.md  vargr-stormcaller.md
content/sessions/: 2026-04-20-2138.md  _index.md
context/: campaign-history.md  next-session-brief.md
data/characters/: rides-the-wake.md
data/sessions/2026-04-20-2138/: map.md  next-steps.md  party.md  scene.md  state.json  story-log.md  transcript.md
data/sessions/adventurer-poc-test-101228/: map.md  next-steps.md  party.md  scene.md  story-log.md  transcript.md
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: char-card.html  head.html  nav.html
scripts/: ddb_auth.py  ddb_discover.py  ddb_poll.py
server/: config.py  gemma.py  main.py  stt.py
session/: map.md  next-steps.md  party.md  scene.md  story-log.md  transcript.md
systemd/: dnd-stage.service
